# SRE-Bench

./: .gitattributes  .gitignore  Dockerfile  README.md  TODO.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test.py  test_all_tasks.py  test_api.py  test_cumulative_reward.py  test_grader.py  validate-submission.sh  validation_output.txt
server/: __init__.py  app.py  env.py  graders.py  models.py  scoring.py  simulator.py
server/tasks/: task_easy.py  task_hard.py  task_medium.py
